--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Development Folder</title>
+    <link rel="stylesheet" href="ex_main.css">
 </head>
 
 <body>
-
+    <script src="ex_apps.js" defer></script>
 </body>
 
 </html>
